# showdoc-push

./: main.py  pyproject.toml
src/showdoc_push/: __init__.py  client.py
